Your commit message

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
   </form>
 
   <p>Don't have account? <a href="register.html">Register</a></p>
+  <p class="resend-hint" style="margin-top: 0.5rem; font-size: 0.9rem;">
+    Didn't receive the confirmation email? <a href="#" id="resendConfirmBtn" style="display: none;">Resend confirmation email</a>
+  </p>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="js/supabase.js"></script>
 <script src="js/auth.js"></script>
 
 </body>
