--- a/found-items.html
+++ b/found-items.html
@@ -76,6 +76,8 @@
   </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="js/supabase.js"></script>
 <script src="js/found-items.js"></script>
 </body>
 </html>
