--- a/lost-items.html
+++ b/lost-items.html
@@ -65,6 +65,8 @@
 
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="js/supabase.js"></script>
 <script src="js/lost-items.js"></script>
 </body>
 </html>
