--- a/register.html
+++ b/register.html
@@ -18,6 +18,8 @@
   </form>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="js/supabase.js"></script>
 <script src="js/auth.js"></script>
 </body>
 </html>
